--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#3DDC84</color>
+    <color name="red">#ff0006</color>
+    <color name="yellow">#e0af1f</color>
+
 </resources>
