Use sharedviewmodel and pass data and display DetailsFragment.kt

--- a/app/src/main/res/navigation/root_nav_graph.xml
+++ b/app/src/main/res/navigation/root_nav_graph.xml
@@ -10,6 +10,10 @@
         android:name="com.example.vgeqapp.ui.SummaryFragment"
         tools:layout="@layout/fragment_summary">
 
+        <action
+            android:id="@+id/action_navigate_to_details_screen"
+            app:destination="@+id/details_fragment" />
+
     </fragment>
 
     <fragment
